Fonctionnalite: Suppression d'une tache a faire

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <section class="timer-counter-label example-box" cdkDrag [cdkDragFreeDragPosition]="dragPosition">
+  <section class="timer-counter-label box" cdkDrag [cdkDragFreeDragPosition]="dragPosition">
         <p *ngIf="counter; else elseBlock">
           {{counter | number}}s
         </p>
