--- a/src/app/timer/timer.component.css
+++ b/src/app/timer/timer.component.css
@@ -31,7 +31,7 @@
 }
 
 /* DRAG & DROP */
-.example-box {
+.box {
   width: 200px;
   height: 200px;
   border: solid 1px #ccc;
@@ -51,7 +51,7 @@
   0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
-.example-box:active {
+.box:active {
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
   0 8px 10px 1px rgba(0, 0, 0, 0.14),
   0 3px 14px 2px rgba(0, 0, 0, 0.12);
