--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -1,4 +1,4 @@
-.example-container {
+.container {
   width: 400px;
   max-width: 100%;
   margin: 25px;
@@ -6,7 +6,7 @@
   vertical-align: top;
 }
 
-.example-list {
+.list {
   border: solid 1px #ccc;
   min-height: 60px;
   background: white;
@@ -15,7 +15,7 @@
   display: block;
 }
 
-.example-box {
+.box {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
@@ -45,15 +45,27 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.box:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.list.cdk-drop-list-dragging .box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-
-.example-full-width {
+.task-field {
   width: 100%;
+}
+
+.todo-form {
+  width: 400px;
+  margin: 0 40px;
+}
+
+.mat-list-base {
+  padding-top: 0;
+}
+
+.mat-nav-list .mat-list-item {
+  cursor: move;
 }
