--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,42 +1,57 @@
-<div class="example-container">
+<!-- Menu -->
+<mat-toolbar color="primary">
+  <span>Tâches chronométrées</span>
+</mat-toolbar>
 
+<div class="form-todo">
   <form [formGroup]="toDoForm" (ngSubmit)="onSubmit(toDoForm.value)" class="todo-form">
-    <mat-form-field class="example-full-width">
+    <mat-form-field class="task-field">
       <mat-label>Tâche</mat-label>
-      <input matInput id="tache" formControlName="tache" type="text" placeholder="Ex: pizza" required>
-      <mat-error *ngIf="tache.errors?.required">Ce champ est requis</mat-error>
-
-<!--      <div *ngIf="submitted && f.tache.errors" class="invalid-feedback">-->
-<!--        <div *ngIf="f.tache.errors.required">Ce champ est requis</div>-->
-<!--      </div>-->
+      <input matInput id="task" formControlName="task" type="text" placeholder="Ex: pizza" required>
+      <mat-error *ngIf="task.errors?.required">Ce champ est requis</mat-error>
     </mat-form-field>
 
-    <button mat-button color="primary" type="submit">Ajouter</button>
+    <button mat-stroked-button color="primary" type="submit">Ajouter</button>
   </form>
+</div>
 
+<div class="container">
   <h2>To do</h2>
 
   <div
+    class="list"
     cdkDropList
     #todoList="cdkDropList"
     [cdkDropListData]="todo"
     [cdkDropListConnectedTo]="[doneList]"
-    class="example-list"
     (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+
+    <!--    <mat-nav-list>-->
+    <mat-list-item class="box" *ngFor="let item of todo" cdkDrag>
+      {{ item.task }}
+
+      <button mat-icon-button (click)="doneTask(item)">
+        <mat-icon matListIcon>check</mat-icon>
+      </button>
+
+      <button mat-icon-button (click)="deleteTask(item.id)">
+        <mat-icon matListIcon>delete_outline</mat-icon>
+      </button>
+    </mat-list-item>
+    <!--    </mat-nav-list>-->
   </div>
 </div>
 
-<div class="example-container">
+<div class="container">
   <h2>Done</h2>
 
   <div
+    class="list"
     cdkDropList
     #doneList="cdkDropList"
     [cdkDropListData]="done"
     [cdkDropListConnectedTo]="[todoList]"
-    class="example-list"
     (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+    <div class="box" *ngFor="let item of done" cdkDrag>{{item.task}}</div>
   </div>
 </div>
