--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,18 @@
-<!--<app-timer></app-timer>-->
-<app-todo-list></app-todo-list>
+<!-- Menu -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a href="/" class="nav-link">TodoTime</a>
+      <!--        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+    </li>
+    <li class="nav-item">
+      <a routerLink="/" class="nav-link">Accueil</a>
+    </li>
+  </ul>
+</nav>
+
+<div class="container">
+  <!--<app-timer></app-timer>-->
+  <router-outlet></router-outlet>
+  <!--  <app-list></app-list>-->
+</div>
