--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -1,10 +1,10 @@
-.container {
-  width: 400px;
-  max-width: 100%;
-  margin: 25px;
-  display: inline-block;
-  vertical-align: top;
-}
+/*.container {*/
+/*  !*width: 400px;*!*/
+/*  !*max-width: 100%;*!*/
+/*  margin: 25px;*/
+/*  display: inline-block;*/
+/*  vertical-align: top;*/
+/*}*/
 
 .list {
   border: solid 1px #ccc;
@@ -63,7 +63,6 @@
 
 .todo-form {
   width: 400px;
-  margin: 0 40px;
 }
 
 .mat-list-base {
