--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a href="/" class="nav-link">TodoTime</a>
-      <!--        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+      <a routerLink="/" class="nav-link">TodoTime</a>
     </li>
     <li class="nav-item">
       <a routerLink="/" class="nav-link">Accueil</a>
@@ -14,5 +13,4 @@
 <div class="container">
   <!--<app-timer></app-timer>-->
   <router-outlet></router-outlet>
-  <!--  <app-list></app-list>-->
 </div>
