--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -33,8 +33,8 @@
                      [cdkDragDisabled]="hide"
                      [style.background-color]="colors[i]">
 
-        <div class="task-field-edit" *ngIf="!hide && !item.done; else inputItem" (click)="toggleInput()">
-          {{ item.name }}
+        <div class="task-field-edit" *ngIf="!hide && !item.done; else inputItem">
+          <span (click)="toggleInput()">{{ item.name }}</span>
 
           <button mat-icon-button matTooltip="Supprimer la tâche" (click)="deleteTask(item.name)">
             <mat-icon matListIcon>delete_outline</mat-icon>
@@ -49,7 +49,7 @@
             <!--              <mat-error *ngIf="task.errors?.required">Ce champ est requis</mat-error>-->
           </mat-form-field>
 
-          <button mat-icon-button matTooltip="Valider" type="submit" (click)="updateTask(item)">
+          <button mat-icon-button matTooltip="Valider" type="submit" (click)="updateTask(item); toggleInput();">
             <mat-icon matListIcon>check</mat-icon>
           </button>
         </ng-template>
@@ -60,16 +60,16 @@
 
   <div class="col-md-6">
     <!-- Liste de tâches terminées -->
-    <h4>Done ({{done.length}})</h4>
+    <h4>Done ({{tasksDoneList.length}})</h4>
 
     <div
       class="list"
       cdkDropList
       #doneList="cdkDropList"
-      [cdkDropListData]="done"
+      [cdkDropListData]="tasksDoneList"
       [cdkDropListConnectedTo]="[todoList]"
       (cdkDropListDropped)="drop($event)">
-      <div class="box" *ngFor="let item of done" cdkDrag cdkDragDisabled>{{item.task}}</div>
+      <div class="box" *ngFor="let item of tasksDoneList" cdkDrag>{{item.name}}</div>
     </div>
   </div>
 </div>
