--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -4,7 +4,8 @@
 <div class="container">
     <div class="col-md-6">
         <h4>To do ({{tasksTodoList.length}})</h4>
-
+        
+        <button type="button" class="btn btn-primary" (click)="addTask('ttt')">Add a new task</button>
         <!-- class="list" *ngFor="let item of item$ | async"> -->
         <!-- {{item.description}} -->
         <div cdkDropList
@@ -14,7 +15,10 @@
         class="list"
         (cdkDropListDropped)="drop($event)">
             @for (task of tasksTodoList; track task) {
-            <div class="box" cdkDrag>{{task.description}}</div>
+            <div class="box" cdkDrag>
+                {{task.description}}
+                <button type="button" class="btn btn-danger" (click)="removeTask(task)">remove</button>
+            </div>
             }
         </div>
     </div>
